--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -50,9 +50,13 @@
       
       
      </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <%= form_tag(search_path, :method => "get") do %>
+    <div class ="input-group">
+    	<%= search_field_tag :search, params[:search], placeholder:"Type", class:"form-control" %>
+    	<div class="input-group=btn">
+    		<%= button_tag "Search", :class => 'btn btn-info glyphicon glyphicon-search', :name => nil %>   		
+    	</div>
+    </div>
+    <% end %>
   </div>
 </nav>
