--- a/app/views/friends/search.html.erb
+++ b/app/views/friends/search.html.erb
@@ -1,5 +1,30 @@
 <h3>Search Results </h3>
 
-	<% @results.each do |result| %>
-		<%= result.first_name %><br/>
-	<% end %>
+	
+		<table class="table table-striped table-bordered table-hover">
+  			<thead class="thead-dark">
+    			<tr>
+      			  <th>Name</th>
+			      <th>Email</th>
+			      <th>Phone</th>
+			      <th>Twitter</th>
+			      
+			     	
+      
+    			</tr>
+  			</thead>
+  			<tbody>
+    <% @results.each do |result| %>
+     <tr>
+      <td><%= link_to result.first_name + " " + result.last_name %></td>
+      <td><%= result.email %></td>
+      <td><%= result.phone %></td>
+      <td><%= result.twitter %></td>
+      
+     </tr>
+     <% end %>
+
+        
+  		</tbody>
+	</table>
+	
